--- a/Heaps/Heaps.csproj
+++ b/Heaps/Heaps.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ConnectedRopes.cs" />
     <Compile Include="GenericMinHeap.cs" />
     <Compile Include="Heap.cs" />
+    <Compile Include="HeapNodeHeap.cs" />
     <Compile Include="HeapWithIndexMapping.cs" />
     <Compile Include="HeapWithListNode.cs" />
     <Compile Include="KPlacesApart.cs" />
@@ -56,9 +57,11 @@
     <Compile Include="MinimimumLargestElement.cs" />
     <Compile Include="MInimumLargestElement.cs" />
     <Compile Include="PrefixMedian.cs" />
+    <Compile Include="ProductofThree.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunningMedian.cs" />
+    <Compile Include="SpecialMedian.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
