Find maximum jobs

--- a/GreedyProblems/GreedyProblems.csproj
+++ b/GreedyProblems/GreedyProblems.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FindMaximumJobs.cs" />
     <Compile Include="FreeCars.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
