Added Seats problem from Greedy

--- a/Stack/Stack.csproj
+++ b/Stack/Stack.csproj
@@ -44,12 +44,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BalancedParanthesisProblem.cs" />
+    <Compile Include="DoubleCharTrouble.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SortaStack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GreedyProblems\GreedyProblems.csproj">
+      <Project>{83330281-D1D7-423E-A59E-C030B6F85F72}</Project>
+      <Name>GreedyProblems</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
