--- a/GreedyProblems/GreedyProblems.csproj
+++ b/GreedyProblems/GreedyProblems.csproj
@@ -49,6 +49,7 @@
     <Compile Include="MiceToHolesProblem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Seats.cs" />
     <Compile Include="ShipProblem.cs" />
   </ItemGroup>
   <ItemGroup>
