--- a/RecursionRevision/RecursionRevision.csproj
+++ b/RecursionRevision/RecursionRevision.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7723730F-4BD3-4382-85E6-31361ACBA30B}</ProjectGuid>
+    <ProjectGuid>{037207D7-D0F5-4C34-B7E6-C800E442D0EB}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>BackTracking</RootNamespace>
-    <AssemblyName>BackTracking</AssemblyName>
+    <RootNamespace>RecursionRevision</RootNamespace>
+    <AssemblyName>RecursionRevision</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,10 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AllCombinations.cs" />
+    <Compile Include="CheckArraySorted.cs" />
+    <Compile Include="PatternSort\PatternProblems.cs" />
+    <Compile Include="PrintReverseOrder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sixlets.cs" />
+    <Compile Include="QuickSort.cs" />
+    <Compile Include="SearchElement.cs" />
+    <Compile Include="StringRecursion\RemoveChar.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
