--- a/ArraysRevision/ArraysRevision.csproj
+++ b/ArraysRevision/ArraysRevision.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BeggerTemple.cs" />
+    <Compile Include="MaximumSumSubArray.cs" />
+    <Compile Include="PickFromBothSides.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
