--- a/GraphProblemProject/GraphProblemProject.csproj
+++ b/GraphProblemProject/GraphProblemProject.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FDFS.cs" />
     <Compile Include="IsPathExists.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
