--- a/BinarySearchPractice/BinarySearchPractice.csproj
+++ b/BinarySearchPractice/BinarySearchPractice.csproj
@@ -43,10 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FindMedian.cs" />
+    <Compile Include="FindPeakElement.cs" />
     <Compile Include="FindTargetElement.cs" />
+    <Compile Include="FoodDistribution.cs" />
     <Compile Include="InsertSortedElement.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RotatedSortedArray.cs" />
     <Compile Include="SearchBiotonicArray.cs" />
   </ItemGroup>
   <ItemGroup>
